# workspace-agregator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md
src/: build.rs  config.rs  lib.rs  main.rs  version.rs
src/analisys/: query.rs
src/cli/: help.rs  mod.rs
src/filters/: gitignore.rs  mod.rs  patterns.rs
src/output/: enhanced.rs  files.rs  mod.rs  tree.rs  workspace.rs  writer.rs
src/processor/: core.rs  cross_ref.rs  mod.rs  output.rs  types.rs
src/processor/analysis/: analysis.rs  complexity.rs  dependencies.rs  language.rs  metrics.rs  mod.rs  stats.rs
src/processor/visualization/: charts.rs  llm.rs  meta.rs  mod.rs  summary.rs
src/tests/: config_tests.rs  output_tests.rs  processor_tests.rs
src/tests/helpers/: mod.rs
