[package]
name = "workspace-aggregator"
version = "0.4.5"
edition = "2021"
authors = ["Guilherme Baufaker Rêgo <baufaker@protonmail.com>"]
description = "A tool to aggregate and analyze directory contents"
license = "MIT"

[dependencies]
indicatif = "0.17.7"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
vergen = { version = "8.0.0", features = ["build", "cargo"], optional = true }
serde_json = "1.0"
colored = "3.0"
terminal_size = "0.4"
ascii-art = "0.1"
rayon = "1.8"
sled = "0.34"
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"


[features]
build-info = ["vergen"]

[build-dependencies]
toml_edit = "0.22.6"
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "rustc"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
